--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
       word-break: break-word;
     }
 
-    .marketing-feature:not(:last-child) {
+    .marketing-feature
+      not(:last-child) {
       margin-bottom: 8px;
     }
 
@@ -170,6 +171,7 @@
 
     .marketing-feature .text {
       flex: 1;
+      text-align: right;
     }
 
     .marketing-feature .text h5 {
