--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
   line-height: 1.7;
   word-break: break-word;
   margin-bottom: 0; /* إزالة المسافة السفلية */
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .marketing-feature:not(:last-child) {
