--- a/index.html
+++ b/index.html
@@ -240,18 +240,24 @@
 
 <!-- سلايدر وجهات -->
 <style>
+  .slider-title {
+    font-weight: bold;
+    font-size: 16px; /* خط أصغر */
+    margin: 10px 20px 5px; /* تقليل المسافة بين السلايدرات */
+    color: #333;
+  }
+
   .destination-slider {
     overflow-x: auto;
     white-space: nowrap;
-    padding: 10px 0;
+    padding: 5px 10px; /* تقليل المسافات العلوية */
     scroll-behavior: smooth;
   }
 
   .destination-card {
     display: inline-block;
-    width: 200px;
-    margin: 0 10px;
-    vertical-align: top;
+    width: 180px;
+    margin: 0 5px;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -264,29 +270,27 @@
 
   .destination-card img {
     width: 100%;
+    height: 120px;
     border-radius: 10px 10px 0 0;
+    object-fit: cover;
   }
 
   .destination-card .card-body {
-    padding: 10px;
+    padding: 8px;
     text-align: center;
-  }
-
-  .slider-title {
-    font-weight: bold;
-    font-size: 20px;
-    margin: 20px 0 10px;
-    color: #333;
+    font-size: 14px;
   }
 
   .see-more {
     text-align: left;
-    margin-top: 10px;
+    padding: 5px 20px;
+    margin-bottom: 15px;
   }
 
   .see-more a {
     color: #007bff;
     font-weight: bold;
+    font-size: 14px;
     text-decoration: none;
   }
 
