--- a/index.html
+++ b/index.html
@@ -274,14 +274,15 @@
   }
 
   .destination-card {
-    display: inline-block;
-    width: 250px;
-    margin: 0 5px;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    transition: transform 0.3s;
-  }
+  display: inline-block;
+  width: 250px; /* أو القيمة التي اخترتها */
+  height: 200px; /* زيادة الارتفاع هنا */
+  margin: 0 5px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  transition: transform 0.3s;
+}
 
   .destination-card:hover {
     transform: scale(1.05);
@@ -289,7 +290,7 @@
 
   .destination-card img {
     width: 180%;
-    height: 180px;
+    height: 150px;
     border-radius: 10px 10px 0 0;
     object-fit: cover;
   }
