--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <div class="see-more"><a href="#">المزيد</a></div>
   </div>
   <div class="destination-slider">
-    <div class="destination-card"><img src="asia2.png" alt=""><div class="card-body">بانكوك</div></div>
+    <div class="destination-card"><img src="inages/asia1.jpg" alt=""><div class="card-body">بانكوك</div></div>
     <div class="destination-card"><img src="images/asia2.jpg" alt=""><div class="card-body">كوالالمبور</div></div>
     <div class="destination-card"><img src="images/asia3.jpg" alt=""><div class="card-body">طوكيو</div></div>
     <div class="destination-card"><img src="images/asia4.jpg" alt=""><div class="card-body">بالي</div></div>
