--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
   </div>
   <div class="destination-slider">
     <div class="destination-card"><img src="bangkok.jpg" alt=""><div class="card-body">بانكوك</div></div>
-    <div class="destination-card"><img src="images/asia2.jpg" alt=""><div class="card-body">كوالالمبور</div></div>
+    <div class="destination-card"><img src="riyadh.jpg" alt=""><div class="card-body">كوالالمبور</div></div>
     <div class="destination-card"><img src="images/asia3.jpg" alt=""><div class="card-body">طوكيو</div></div>
     <div class="destination-card"><img src="images/asia4.jpg" alt=""><div class="card-body">بالي</div></div>
     <div class="destination-card"><img src="images/asia5.jpg" alt=""><div class="card-body">سيؤول</div></div>
