--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
     <div class="see-more"><a href="#">المزيد</a></div>
   </div>
   <div class="destination-slider">
-    <div class="destination-card"><img src="bangkok.jpg" alt=""><div class="card-body">بانكوك</div></div>
-    <div class="destination-card"><img src="riyadh.jpg" alt=""><div class="card-body">الرياض</div></div>
+    <div class="destination-card"><img src="bangkok.jpg" alt="بانكوك"><div class="card-body">بانكوك</div></div>
+    <div class="destination-card"><img src="riyadh.jpg" alt="الرياض"><div class="card-body">الرياض</div></div>
     <div class="destination-card"><img src="images/asia3.jpg" alt=""><div class="card-body">طوكيو</div></div>
     <div class="destination-card"><img src="images/asia4.jpg" alt=""><div class="card-body">بالي</div></div>
     <div class="destination-card"><img src="images/asia5.jpg" alt=""><div class="card-body">سيؤول</div></div>
