--- a/index.html
+++ b/index.html
@@ -300,6 +300,18 @@
       text-align: center;
       font-size: 14px;
     }
+ 
+  .destination-wrapper {
+  display: inline-block;
+  text-align: center;
+  margin: 0 5px;
+}
+
+.destination-name {
+  font-size: 14px;
+  color: #333;
+  margin-top: 5px;
+}
   </style>
 
 <!-- سلايدر 1: وجهات آسيا -->
@@ -309,7 +321,7 @@
     <div class="see-more"><a href="#">المزيد</a></div>
   </div>
   <div class="destination-slider">
-    <div class="destination-card"><img src="bangkok.jpg" alt="بانكوك"><div class="card-body">بانكوك</div></div>
+    <div class="destination-card"><img src="bangkok.jpg" alt="بانكوك"></div>
     <div class="destination-card"><img src="riyadh.jpg" alt="الرياض"><div class="card-body">الرياض</div></div>
     <div class="destination-card"><img src="images/asia3.jpg" alt=""><div class="card-body">طوكيو</div></div>
     <div class="destination-card"><img src="images/asia4.jpg" alt=""><div class="card-body">بالي</div></div>
