--- a/index.html
+++ b/index.html
@@ -274,32 +274,37 @@
     }
 
     .destination-card {
-      display: inline-block;
-      width: 250px;
-      height: 170px;
-      margin: 0 5px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      transition: transform 0.3s;
-    }
+  display: inline-block;
+  width: 250px;
+  height: 200px; /* زيادة الارتفاع لاستيعاب اسم المدينة */
+  margin: 0 5px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1); /* الإبقاء على الظل كما هو */
+  transition: transform 0.3s;
+}
 
     .destination-card:hover {
       transform: scale(1.05);
     }
 
     .destination-card img {
-      width: 100%; /* ✅ هذا هو التعديل المهم */
-      height: 150px;
-      border-radius: 10px 10px 0 0;
-      object-fit: cover;
-    }
+  width: 100%;
+  height: 150px;
+  border-radius: 10px 10px 0 0;
+  object-fit: cover;
+}
 
     .card-body {
-      padding: 8px;
-      text-align: center;
-      font-size: 14px;
-    }
+  padding: 8px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold; /* جعل اسم المدينة بارزًا */
+  color: #333; /* لون النص داكن للوضوح */
+  background: #fff; /* خلفية بيضاء لتجنب التداخل */
+  border-radius: 0 0 10px 10px; /* تنسيق الحواف السفلية */
+  line-height: 1.5; /* تحسين المسافة بين السطور */
+}
   </style>
 
 <!-- سلايدر 1: وجهات آسيا -->
