--- a/index.html
+++ b/index.html
@@ -316,14 +316,14 @@
   <div class="destination-slider">
     <div class="destination-card"><img src="bangkok.jpg" alt="بانكوك"><div class="card-body">بانكوك</div></div>
     <div class="destination-card"><img src="riyadh.jpg" alt="الرياض"><div class="card-body">الرياض</div></div>
-    <div class="destination-card"><img src="images/asia3.jpg" alt=""><div class="card-body">طوكيو</div></div>
-    <div class="destination-card"><img src="images/asia4.jpg" alt=""><div class="card-body">بالي</div></div>
-    <div class="destination-card"><img src="images/asia5.jpg" alt=""><div class="card-body">سيؤول</div></div>
-    <div class="destination-card"><img src="images/asia6.jpg" alt=""><div class="card-body">مانيلا</div></div>
-    <div class="destination-card"><img src="images/asia7.jpg" alt=""><div class="card-body">هونغ كونغ</div></div>
-    <div class="destination-card"><img src="images/asia8.jpg" alt=""><div class="card-body">سنغافورة</div></div>
-    <div class="destination-card"><img src="images/asia9.jpg" alt=""><div class="card-body">هانوي</div></div>
-    <div class="destination-card"><img src="images/asia10.jpg" alt=""><div class="card-body">دبي</div></div>
+    <div class="destination-card"><img src="maldiv.jpg" alt="مالديف"><div class="card-body">مالديف</div></div>
+    <div class="destination-card"><img src="dubai.jpg" alt="دبي"><div class="card-body">دبي</div></div>
+    <div class="destination-card"><img src="kuala.jpg" alt="كوالالمبور"><div class="card-body">كوالالمبور</div></div>
+    <div class="destination-card"><img src="singa.jpg" alt="سنغافورة"><div class="card-body">سنغافورة</div></div>
+    <div class="destination-card"><img src="manila.jpg" alt="مانيلا"><div class="card-body">مانيلا</div></div>
+    <div class="destination-card"><img src="tokio.jpg" alt="طوكيو"><div class="card-body">طوكيو</div></div>
+    <div class="destination-card"><img src="bali.jpg" alt="بالي"><div class="card-body">بالي</div></div>
+    <div class="destination-card"><img src="hanoi.jpg" alt="هانوي"><div class="card-body">هانوي</div></div>
   </div>
 </div>
 
