--- a/index.html
+++ b/index.html
@@ -334,16 +334,16 @@
     <div class="see-more"><a href="#">المزيد</a></div>
   </div>
   <div class="destination-slider">
-    <div class="destination-card"><img src="images/europe1.jpg" alt=""><div class="card-body">باريس</div></div>
-    <div class="destination-card"><img src="images/europe2.jpg" alt=""><div class="card-body">لندن</div></div>
-    <div class="destination-card"><img src="images/europe3.jpg" alt=""><div class="card-body">روما</div></div>
-    <div class="destination-card"><img src="images/europe4.jpg" alt=""><div class="card-body">برشلونة</div></div>
-    <div class="destination-card"><img src="images/europe5.jpg" alt=""><div class="card-body">أمستردام</div></div>
-    <div class="destination-card"><img src="images/europe6.jpg" alt=""><div class="card-body">فيينا</div></div>
-    <div class="destination-card"><img src="images/europe7.jpg" alt=""><div class="card-body">ميونخ</div></div>
-    <div class="destination-card"><img src="images/europe8.jpg" alt=""><div class="card-body">برلين</div></div>
-    <div class="destination-card"><img src="images/europe9.jpg" alt=""><div class="card-body">لشبونة</div></div>
-    <div class="destination-card"><img src="images/europe10.jpg" alt=""><div class="card-body">اسطنبول</div></div>
+    <div class="destination-card"><img src="baris.jpg" alt="باريس"><div class="card-body">باريس</div></div>
+    <div class="destination-card"><img src="london.jpg" alt="لندن"><div class="card-body">لندن</div></div>
+    <div class="destination-card"><img src="roma.jpg" alt="روما"><div class="card-body">روما</div></div>
+    <div class="destination-card"><img src="viena.jpg" alt="فيينا"><div class="card-body">فيينا</div></div>
+    <div class="destination-card"><img src="amstrdam.jpg" alt="أمستردام"><div class="card-body">أمستردام</div></div>
+    <div class="destination-card"><img src="istanbol.jpg" alt="إسطنبول"><div class="card-body">إسطنبول</div></div>
+    <div class="destination-card"><img src="athina.jpg" alt="أثينا"><div class="card-body">أثينا</div></div>
+    <div class="destination-card"><img src="madrid.jpg" alt="مدريد"><div class="card-body">مدريد</div></div>
+    <div class="destination-card"><img src="tblisi.jpg" alt="تبليسي"><div class="card-body">تبليسي</div></div>
+    <div class="destination-card"><img src="bern.jpg" alt="بيرن"><div class="card-body">بيرن</div></div>
   </div>
 </div>
 
