--- a/index.html
+++ b/index.html
@@ -354,16 +354,16 @@
     <div class="see-more"><a href="#">المزيد</a></div>
   </div>
   <div class="destination-slider">
-    <div class="destination-card"><img src="images/africa1.jpg" alt=""><div class="card-body">كيب تاون</div></div>
-    <div class="destination-card"><img src="images/africa2.jpg" alt=""><div class="card-body">مراكش</div></div>
-    <div class="destination-card"><img src="images/africa3.jpg" alt=""><div class="card-body">القاهرة</div></div>
-    <div class="destination-card"><img src="images/africa4.jpg" alt=""><div class="card-body">تونس</div></div>
-    <div class="destination-card"><img src="images/africa5.jpg" alt=""><div class="card-body">داكار</div></div>
-    <div class="destination-card"><img src="images/africa6.jpg" alt=""><div class="card-body">الخرطوم</div></div>
-    <div class="destination-card"><img src="images/africa7.jpg" alt=""><div class="card-body">الدار البيضاء</div></div>
-    <div class="destination-card"><img src="images/africa8.jpg" alt=""><div class="card-body">جوهانسبرغ</div></div>
-    <div class="destination-card"><img src="images/africa9.jpg" alt=""><div class="card-body">أبيدجان</div></div>
-    <div class="destination-card"><img src="images/africa10.jpg" alt=""><div class="card-body">لاجوس</div></div>
+    <div class="destination-card"><img src="qairo.jpg" alt="القاهرة"><div class="card-body">القاهرة</div></div>
+    <div class="destination-card"><img src="keep.jpg" alt="كيب تاون"><div class="card-body">كيب تاون</div></div>
+    <div class="destination-card"><img src="aldar.jpg" alt="الدار البيضاء"><div class="card-body">الدار البيضاء</div></div>
+    <div class="destination-card"><img src="morish.jpg" alt="موريشيوس"><div class="card-body">موريشيوس</div></div>
+    <div class="destination-card"><img src="mdgsh.jpg" alt="مدغشقر"><div class="card-body">مدغشقر</div></div>
+    <div class="destination-card"><img src="sishl.jpg" alt="سيشل"><div class="card-body">سيشل</div></div>
+    <div class="destination-card"><img src="marakish.jpg" alt="مراكش"><div class="card-body">مراكش</div></div>
+    <div class="destination-card"><img src="iskandria.jpg" alt="الإسكندرية"><div class="card-body">الإسكندرية</div></div>
+    <div class="destination-card"><img src="aqadir.jpg" alt="أغادير"><div class="card-body">أغادير</div></div>
+    <div class="destination-card"><img src="sharm.jpg" alt="شرم الشيخ"><div class="card-body">شرم الشيخ</div></div>
   </div>
 </div>
 
